back color blue

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
     <h1>This is my Github Pages website!</h1>
     <h2>Enjoy the show!</h2>
-    <p>What color is this</p>
+   <div>
+        <p>What color is this</p>
+   </div> 
 </body>
 </html>
