--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <h1>This is my Github Pages website!</h1>
     <h2>Enjoy the show!</h2>
    <div>
-        <p>What color is this</p>
+        <p>More to come!  More features, more style: the page will improve.</p>
    </div> 
+   <img src="newday.jpeg" alt="newday" name="newday">
 </body>
 </html>
