--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
    <div>
         <p>More to come!  More features, more style: the page will improve.</p>
    </div> 
-   <img src="newday.jpeg" alt="newday" name="newday">
+   <div>  
+       <img src="newday.jpeg" alt="newday" name="newday">   
+   </div>
 </body>
 </html>
