--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <p>More to come!  More features, more style: the page will improve.</p>
    </div> 
    <div>  
-       <img src="newday.jpeg" alt="newday" name="newday">   
+       <img src="newday.jpeg" alt="newday" name="newday">  
+       <img src="sky.jpeg" alt="sky" name="sky">
    </div>
 </body>
 </html>
