added an id called firstTry to a div

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>This is my Github Pages website!</h1>
     <h2>Enjoy the show!</h2>
-   <div>
+   <div id="firstTry">
         <p>More to come!  More features, more style: the page will improve.</p>
    </div> 
    <div>  
