--- a/index.html
+++ b/index.html
@@ -2,21 +2,44 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <link rel="stylesheet" href="styles.css">
     <title>
         My Site!
     </title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 </head>
 <body>
-    <h1>This is my Github Pages website!</h1>
-    <h2>Enjoy the show!</h2>
-   <div id="firstTry">
-        <p>More to come!  More features, more style: the page will improve.</p>
-   </div> 
-   <div>  
-       <img src="newday.jpeg" alt="newday" name="newday">  
-       <img src="sky.jpeg" alt="sky" name="sky">
-   </div>
+    <div class="container">
+        <div class="row">
+          <div class="col-sm-9">
+            <img src="newday.jpeg" class="img-fluid" alt="Responsive newday">
+            <div class="row">
+              <div class="col-8 col-sm-6" id="firstTry">
+                <h2>This is my Github Pages website!</h2>
+              </div>
+              <div class="col-4 col-sm-6" id="firstTry">
+                <h3>Enjoy The Show!</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">  
+            <div class="col">
+              <img src="sky.jpeg" class="img-fluid" alt="sky" name="sky">
+              <div class="row">
+                <div class="alert alert-info">
+                    More to come!  More features, more style: the page will improve.
+               </div> 
+              </div>
+            </div>
+        </div>
+
+      </div>
+   
+   
+   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </body>
 </html>
