copy edits and image file deletes

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
             <div class="overlay">
                 <div class="container">
                     <div>
-                        <h1><span>Greetings</span><br>I'm glad you came by</h1>
-                        <p>The page has just begun. Until more features are added, enjoy the scene at the Arch.  One of America's National Monuments, the Gateway Arch abstractly opens the horizon the the west.  It anchors the St. Louis skyline with aplomb.</p>
+                        <h1><span>We're just getting started.</span><br>Take a breath.</h1>
+                        <p> Until more features are added, enjoy the scenery.  One of America's National Monuments, the Gateway Arch abstractly opens the westward horizon.  It anchors the St. Louis skyline with aplomb.</p>
                         <!-- <button><a href="#" class="text-uppercase">book now</a></button> -->
                     </div>
                 </div>
