--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <h1>This is my Github Pages website!</h1>
     <h2>Enjoy the show!</h2>
+    <canvas id="can"></canvas>
    <div id="firstTry">
         <p>More to come!  More features, more style: the page will improve.</p>
    </div> 
@@ -18,5 +19,6 @@
        <img src="newday.jpeg" alt="newday" name="newday">  
        <img src="sky.jpeg" alt="sky" name="sky">
    </div>
+   <script src="index.js"></script>
 </body>
 </html>
